--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "is-date-object": "^1.0.5",
+    "magic-string": "^0.30.12",
+    "postcss": "^8.4.48",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "strip-comments": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^5.1.0"
   }
 }
